--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </form>
       <h1 id="best-match"></h1>
 
-      <form action="#" class="form-inline justify-content-center" id="search-movies">
+      <form action="#" class="form-inline justify-content-center" id="search-form">
         <input id="search" type="text" class="form-control">
         <input type="submit" value="Search" class="btn btn-primary">
       </form>
